<resources>
    <string name="app_name">Stylish</string>
    <string name="screen1">Choose Products</string>
    <string name="screen2">Make Payment</string>
    <string name="screen3">Get Your Order</string>
    <string name="screen1desc">Browse through various products, select your favorites, and add them to your cart for a seamless shopping experience.</string>
    <string name="screen2desc">Choose your preferred payment method, securely enter details, and complete the transaction to proceed with your purchase.</string>
    <string name="screen3desc">After payment, your order will be processed, shipped, and delivered to your address with tracking information provided.</string>
    <string name="startDesc">Discover amazing deals on top-quality products. Shop smart and save big on every purchase!</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="shop_more_pay_less">Shop More Pay Less</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create An Account</string>
    <string name="or_continue_with">- OR Continue with -</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I Already Have an Account</string>
    <string name="button_you_are_agree_to_terms">button, you are agree to our terms and condition.</string>
    <string name="register">Register</string>
    <string name="by_clicking_the">By clicking the</string>
    <string name="submit">Submit</string>
    <string name="send_message_to_reset">* We will send you a message to set or reset your new password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="client_id">996925543440-l5p9u0bpunn9rug3pt8mgop1mtvg0hsn.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="cart">Cart</string>
    <string name="all_featured">All Featured</string>
    <string name="search_any_product">Search any Product...</string>
    <string name="shop_now">Shop Now</string>
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="view_all">View All</string>
    <string name="_50_40_off">50-40% OFF</string>
    <string name="now_in_product">Now in (product)</string>
    <string name="all_colours">All colours</string>
    <string name="loading">Loading...</string>
    <string name="trending_products">Trending Products</string>
    <string name="special_offers">Special Offers</string>
    <string name="special_offer_description">We make sure you get the offer you need at best prices</string>
    <string name="stand_a_chance_to_get_rewarded">Stand a chance to get rewarded</string>
    <string name="visit_now">Visit now</string>
    <string name="flat_and_heels">Flat and Heels</string>
    <string name="product_details">Product Details:</string>
    <string name="buy_now">Buy Now</string>
    <string name="delivery_in">Delivery in</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="welcome_to_stylish">Welcome to Stylish</string>
    <string name="order_payment_details">Order Payment Details</string>
    <string name="order_amount">Order Amount:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="select_total_quantity">Select total quantity:</string>
    <string name="get_free_delivery">Spend more than $1000 to get FREE delivery!</string>
    <string name="checkout">Checkout</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email_address">Email Address</string>
    <string name="address_details">Address Details</string>
    <string name="pin_code_area_code">Pin Code / Area Code</string>
    <string name="enter_pincode_area_code">Enter pincode / area code</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_your_delivery_address">Enter your delivery address</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="state">State</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="ontario">Ontario</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="canada">Canada</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="no_items_in_the_cart">No items in the cart</string>
    <string name="place_an_order">Place an order</string>
    <string name="please_agree_to_the_terms_and_conditions_to_proceed">Please agree to the Terms and Conditions to proceed.</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="card_number">Card Number</string>
    <string name="enter_cardholder_name">Enter cardholder name</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="payment">Payment</string>
</resources>