<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back_arrow"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/checkout"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/radical_red"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_full_name"
                android:background="@drawable/input_field_background"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_phone_number"
                android:background="@drawable/input_field_background"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/radical_red"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_code_area_code"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/pinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pincode_area_code"
                android:maxLength="6"
                android:inputType="textCapCharacters"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_delivery_address"
                android:inputType="textPostalAddress"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_city"
                android:inputType="text"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_state"
                android:text="@string/ontario"
                android:inputType="none"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:focusable="false"
                android:clickable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_country"
                android:text="@string/canada"
                android:inputType="none"
                android:background="@drawable/input_field_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:focusable="false"
                android:clickable="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/radical_red"
            android:text="@string/proceed_to_payment"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>
