<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="40sp"
        android:typeface="sans"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/username_or_email"
        android:inputType="text"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="6dp"
        android:padding="14dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/password_hide"
        android:drawablePadding="10dp"
        android:padding="14dp"
        android:inputType="textPassword"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/password_hide"
        android:drawablePadding="10dp"
        android:padding="14dp"
        android:inputType="textPassword"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/registerTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:lineSpacingExtra="8dp"
            android:gravity="center" />
    </LinearLayout>



    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:theme="@style/Button.color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:cornerRadius="10dp"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_already_have_an_account"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="@color/radical_red"
            android:layout_marginStart="4dp" />
    </LinearLayout>
</LinearLayout>
