<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    app:flow_horizontalAlign="center"
    android:background="@drawable/get_started_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/shop_more_pay_less"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:typeface="sans"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/startDesc"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:typeface="sans"
        android:lineSpacingExtra="8dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:theme="@style/Button.color"
        android:padding="8dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:cornerRadius="10dp"/>
</LinearLayout>